<resources>
    <string name="app_name">Trinity World</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="welcome" translatable="false">Welcome to the Trinity World</string>
    <string name="web_client_id" translatable="false">619883460977-1ai4496ae8q2iq91euv716bhd9mpff9m.apps.googleusercontent.com</string>
    <string name="Login">Login</string>
    <string name="Username">Username</string>
    <string name="Rememberme">Remember Me</string>
    <string name="Change">Change language</string>
    <string name="Signup">Signup</string>
    <string name="email">Email ID</string>
    <string name="signout">Log Out</string>
    <string name="admin" translatable="false">Admin Page</string>
    <string name="user" translatable="false">User Page</string>
    <string name="already">Language already selected!</string>
    <string name="newEmail">This Email has already been taken</string>
    <string name="Success">Logging Successful</string>
    <string name="SuccessSign">Sign up Successful!!</string>
    <string name="Failed">Incorrect Email or password</string>


</resources>