<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    tools:viewBindingIgnore="true"
    >


    <!--    <Switch-->
    <!--        android:id="@+id/switch1"-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:text="@string/Rememberme" />-->


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="@color/teal_200"
        android:textSize="40dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />
<!--        android:textStyle="bold||italic"-->


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        app:cardCornerRadius="10dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="156dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp"
        >
        <ImageView
            android:layout_width="38dp"
            android:layout_marginLeft="5dp"
            android:layout_height="match_parent"
            android:background="@drawable/ic_baseline_person_24"
            />
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@color/white"
            android:textAlignment="center"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="209dp" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="10dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintTop_toBottomOf="@+id/cardView"
        tools:layout_editor_absoluteX="-16dp">
        <ImageView
            android:layout_width="38dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="5dp"
            android:background="@drawable/ic_baseline_password_24"
            />
        <EditText
            android:id="@+id/pass"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginLeft="30dp"
            android:background="@color/white"
            android:hint="@string/Password"
            android:textAlignment="center"
            android:inputType="textPassword"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="372dp" />

    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="18dp"
        android:backgroundTint="@color/teal_200"
        android:textColor="@color/black"
        android:text="@string/Login"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView2" />


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="472dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
            <ImageButton
                android:id="@+id/number"
                android:layout_width="50dp"
                android:layout_gravity="center"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/phonedark"
                app:layout_constraintTop_toTopOf="@+id/google"
                />

            <ImageButton
                android:id="@+id/google"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:background="@drawable/googleicon"
                />

            <ImageButton
                android:id="@+id/fb"
                android:layout_width="53dp"
                android:layout_height="53dp"
                android:background="@drawable/facebookicon"
                />

    </LinearLayout>

    <TextView
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="28dp"
        android:text="@string/Change"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="--------------Login with--------------"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login"
        app:layout_constraintVertical_bias="0.227" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/change"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">


        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:gravity="center_horizontal"
            android:layout_height="wrap_content"
            android:text="Don't have an account?"
            />

        <TextView
            android:id="@+id/signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/blue"
            android:gravity="center_horizontal"
            android:text="@string/Signup"
            />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>